Fixed email icon overlapping with email.

--- a/src/views/Profile/profile.scss
+++ b/src/views/Profile/profile.scss
@@ -18,15 +18,14 @@
     }
   }
   &_email {
-    display: grid;
-    grid-template-columns: 10% 10% 70% 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
     justify-items: center;
     &_icon {
-      grid-column: 2;
       font-size: 28px;
-    }
-    &_text {
-      grid-column: 3;
+      margin-right: 0.75rem;
     }
   }
 }
